@@ -445,6 +445,7 @@
 	- added "size" and "crc" for all file entry in output XML for completeness and verification of output data
 	- remember the default ram and bios options for future usage
 	- implemented ATTR_NORETURN for Visual Studio
+	- added CMake option USE_VS_ANALYZE to enable Visual Studio Code Analysis
 
 	create_report
 	- added option "report_type" (0 = result report / 1 = comparison report)
